test/files/neg/t8229.scala
import Predef.{any2stringadd => _, _}

object Test {
  val o = new Object()
  o + ""
}
