test/files/neg/t8229.check
t8229.scala:5: error: value + is not a member of Object
  o + ""
    ^
one error found
